--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,14 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.patrickfv.horizonjetbrainside</id>
-    <name>horizon-jetbrains-ide</name>
+    <name>Horizon</name>
     <vendor>patrickfv</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <applicationService serviceImplementation="com.github.patrickfv.horizonjetbrainside.services.MyApplicationService"/>
-        <projectService serviceImplementation="com.github.patrickfv.horizonjetbrainside.services.MyProjectService"/>
+        <themeProvider id="com.github.patrickfv.horizonjetbrainside.dark" path="/horizon.theme.json"/>
+        <themeProvider id="com.github.patrickfv.horizonjetbrainside.bright" path="/horizon_bright.theme.json"/>
     </extensions>
 
-    <applicationListeners>
-        <listener class="com.github.patrickfv.horizonjetbrainside.listeners.MyProjectManagerListener"
-                  topic="com.intellij.openapi.project.ProjectManagerListener"/>
-    </applicationListeners>
 </idea-plugin>
