--- a/bin/main/META-INF/plugin.xml
+++ b/bin/main/META-INF/plugin.xml
@@ -1,14 +1,14 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.patrickfv.horizonjetbrainside</id>
+    <id>com.github.patrickfv.horizonintellij</id>
     <name>Horizon</name>
     <vendor>patrickfv</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <themeProvider id="com.github.patrickfv.horizonjetbrainside.dark" path="/horizon.theme.json"/>
-        <themeProvider id="com.github.patrickfv.horizonjetbrainside.bright" path="/horizon_bright.theme.json"/>
+        <themeProvider id="com.github.patrickfv.horizonintellij.dark" path="/horizon.theme.json"/>
+        <themeProvider id="com.github.patrickfv.horizonintellij.bright" path="/horizon_bright.theme.json"/>
     </extensions>
 
 </idea-plugin>
