--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.patrickfv.horizonjetbrainside
-pluginName = horizon-jetbrains-ide
+pluginName = horizon-intellij
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
