update: terminal colorscheme

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,7 +4,9 @@
     <name>Horizon</name>
     <vendor>patrickfv</vendor>
     <description>
-        A beautifully warm dual theme for intellij, based on horizon theme.
+        <![CDATA[
+        A beautifully warm dual theme for intellij, based on <a href="https://horizontheme.netlify.app/">horizon theme</a>.
+        ]]>
     </description>
     <depends>com.intellij.modules.platform</depends>
 
