fix: plugin group name

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.patrickfv.horizonjetbrainside
+pluginGroup = com.github.patrickfv.horizonintellij
 pluginName = horizon-intellij
 # SemVer format -> https://semver.org
 pluginVersion = 1.0.0
